--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "start:dev": "webpack-dev-server --mode development --open --hot"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@types/react-redux": "^7.1.15",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
-    "autoprefixer": "^10.2.1",
+    "autoprefixer": "^9.8.5",
     "core-js": "^3.8.2",
     "i18next": "^19.8.4",
     "react": "^17.0.1",
@@ -36,7 +38,7 @@
     "@typescript-eslint/parser": "^4.14.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.1.0",
-    "css-loader": "^5.0.1",
+    "css-loader": "^3.4.2",
     "eslint": "^7.18.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -45,17 +47,17 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.1",
-    "node-sass": "^5.0.0",
-    "postcss-loader": "^4.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
     "resolve-url-loader": "^3.1.2",
-    "sass-loader": "^10.1.1",
+    "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
-    "style-loader": "^2.0.0",
+    "style-loader": "^1.1.3",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.10.1"
   }
 }
