--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Vojtěch Vokálek <vojta@invo.eu>",
   "license": "MIT",
   "scripts": {
-    "start:dev": "webpack-dev-server --mode development --open --hot"
+    "start:dev": "webpack-dev-server --mode development --open --hot",
+    "test": "jest"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -32,10 +33,14 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
+    "@testing-library/react": "^11.2.3",
+    "@types/jest": "^26.0.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/redux-mock-store": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "css-loader": "^3.4.2",
@@ -48,13 +53,19 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
     "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
+    "react-test-renderer": "^17.0.1",
+    "redux-mock-store": "^1.5.4",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.14",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
