--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "module": "commonjs",
     "target": "es2015",
     "jsx": "react",
+    "lib": ["dom", "esnext"],
+    "esModuleInterop": true,
     "baseUrl": "./",
     "paths": {
       "./*": ["src/*", "src/*/index"]
@@ -13,5 +15,6 @@
   },
   "include": [
     "./src/**/*"
-  ]
+  ],
+  "exclude": ["node_modules"]
 }
