--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "fetch-mock": "^9.11.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "node-fetch": "^2.6.1",
     "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
     "react-test-renderer": "^17.0.1",
